test/sema/typeck/trait/nested-generic-impl-err.dora
trait Printable {}
impl[T: Printable] Printable for Array[T] {}
impl Printable for Int32 {}
fn assert_printable[T: Printable]() {}
fn main() {
    assert_printable[Array[Array[String]]]();
}

//====================
// error: type `Array[Array[String]]` does not implement trait `Printable`.
// --> nested-generic-impl-err.dora:6:5
//  | fn assert_printable[T: Printable]() {}
//  | fn main() {
//  |     assert_printable[Array[Array[String]]]();
//        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
//  | }
//  | 
// 1 error found.
